
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Refactor password reset not to send password hash as activation key
- [#325] Allow configurable user password hashing with PBKDF2 default implementation
- [#3111] Fix bug causing unnecessary writes to Resource cache files
- Update xPDO to v2.1.1-pl2
- Add modResource.uri_override to allow a uri to be manually set and locked per Resource
- [#3111] Add modResource.uri field to allow context maps to be regenerated in a single query
- [#3859] Remove redundant check for php bug
- [#3858] Fix javascript errors from FC hideField rule
- [#2812] Add link_tag_scheme to define default scheme for makeUrl() call in modLinkTag
- [#3111] Remove resourceListing, documentListing, and documentMap from context cache
- [#3111] Cache refactoring with proper file locking, partitioning, and multiple format support
- [#3111] Update xPDO to release 2.1.0-pl for cache improvements
- [#3740] Add proxy support to modTransportPackage.class.php
- [#3693] Fix reversed content-disposition logic on static resources
- [#3427] Fix issue where User Settings were not respected with filemanager_path/url
- [#3702] Ensure file/image TVs can have files drag/dropped onto them
- [#3465] Add sanity check for non-object to log call in modAccessibleObject::_loadInstance
- [#3615] Fix issue with modx->user->getResourceGroups, set resource groups in "modx.user.{$id}.resourceGroups" session key
- [#3568] Fix double error->failure reference in resource/create processor
- [#3425] MODx.Browser now loads directory of TV's current value on load
- [#3481], [#3571], [#3304], [#3569] Fix issue with filemanager_path in non-web contexts 
- [#3009] Add ability to assign TVs to specific directories and base paths, limit file extensions shown
- [#2679] Add Input Options to TVs, allowing TV inputs to be customized and tweaked
