@@ -109,6 +109,28 @@ class modProcessor {
         );
         return $string;
     }
+
+    /**
+     * Processes a response from a Plugin Event invocation
+     *
+     * @param array/string $response The response generated by the invokeEvent call
+     * @param string $separator
+     * @return string The processed response.
+     */
+    public function processEventResponse($response,$separator = "\n") {
+        if (is_array($response)) {
+            $result = false;
+            foreach ($response as $msg) {
+                if (!empty($msg)) {
+                    $result[] = $msg;
+                }
+            }
+            $result = implode($separator,$result);
+        } else {
+            $result = $response;
+        }
+        return $result;
+    }
 }
 
 /**
