@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODx. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Improve user processors event handling to allow for better SSO integration that can stop save/remove/update
 - Refactor password reset not to send password hash as activation key
 - [#325] Allow configurable user password hashing with PBKDF2 default implementation
 - [#3111] Fix bug causing unnecessary writes to Resource cache files
